Make the `-add-exports=` passed to g-j-f consistent
PiperOrigin-RevId: 513589436